--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,20 +1,40 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(message: String)
+@import controllers.Post
+@import java.time.format.DateTimeFormatter
 
-@*
- * Call the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@main("Welcome to Play") {
-
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-     *@
-    @welcome(message, style = "scala")
-
-}
+@(posts: Seq[Post], form: Form[PostRequest])(implicit messages: Messages)
+<!DOCTYPE html>
+<html lang="ja">
+    <head>
+        <title>Scala Text Textboard</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="/assets/textboard.css">
+    </head>
+    <body>
+        <div class="container">
+            <h1>@Messages("textboard.title")</h1>
+            @for(error <- form.errors){
+                <p class="text-danger" id="error">@Messages(error.message)</p>
+            }
+            <form method="POST" action="/" class="form-inline">
+                <input type="text" class="form-control" id="post" name="post">
+                <button type="submit" class="btn btn-default">@Messages("textboard.send")</button>
+            </form>
+            <table class="table">
+                <thead>
+                    <tr><th>@Messages("textboard.dateTime")</th><th>@Messages("textboard.message")</th></tr>
+                </thead>
+                <tbody>
+                @for(post <- posts.reverse){
+                    <tr>
+                        <td class="post-date">@{
+                            val formatter = DateTimeFormatter.ofPattern(Messages("textboard.dateFormat"), messages.lang.toLocale)
+                            post.date.format(formatter)
+                        }</td>
+                        <td class="post-body">@post.body</td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+        </div>
+    </body>
+</html>
